staging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: netflix-app-stg
  namespace: rj-netflix-stg
  labels:
    app: netflix-app-stg
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: netflix-app-stg
